--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
         <div class="barra_login">
             <div class="form_base">
                 <form class="login">
-                    <input type="text" id="usuario" name="usuario" class="login_usuario" placeholder="Usuário">
-                    <label for="usuario">Usuário</label>
-                    <input type="password" id="senha" name="senha" class="login_usuario" placeholder="Senha">
-                    <label for="senha">Senha</label>
-                    <button class="btn" type="submit">Logar</button>
+                    <div class="campoInput">
+                        <input type="text" id="usuario" name="usuario" class="login_usuario" placeholder="">
+                        <label for="usuario">Usuário</label>
+                    </div>
+                    <div class="campoInput">
+                        <input type="password" id="senha" name="senha" class="login_usuario" placeholder="">
+                        <label for="senha">Senha</label>
+                    </div>
+                    <div class="campoInput">
+                        <button class="btn" type="submit">Logar</button>
+                    </div>
                 </form>
             </div>
             <div class="form_esqueci_senha">
